# SlashGaming-Diablo-II-Free-Classic-Menu

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  SGD2FreeClassicMenu.dsp  SGD2FreeClassicMenu.dsw
src/patches/ui/d2launch/: CMakeLists.txt
src/patches/ui/d2launch/change_password_screen_text/: CMakeLists.txt  patch_1_07_d2launch_cpst.c  patch_1_07_d2launch_cpst.h  patch_1_07_shim_d2launch_cpst.asm  patch_d2launch_cpst.c  patch_d2launch_cpst.h  replacement_d2launch_cpst.c  replacement_d2launch_cpst.h
src/patches/ui/d2launch/char_create_screen_background/: CMakeLists.txt  patch_1_07_d2launch_ccsb.c  patch_1_07_d2launch_ccsb.h  patch_1_07_shim_d2launch_ccsb.asm  patch_d2launch_ccsb.c  patch_d2launch_ccsb.h  replacement_d2launch_ccsb.c  replacement_d2launch_ccsb.h
src/patches/ui/d2launch/create_account_screen_text/: CMakeLists.txt  patch_1_07_d2launch_cast.c  patch_1_07_d2launch_cast.h  patch_1_07_shim_d2launch_cast.asm  patch_d2launch_cast.c  patch_d2launch_cast.h  replacement_d2launch_cast.c  replacement_d2launch_cast.h
src/patches/ui/d2launch/credits_screen_background/: CMakeLists.txt  patch_1_07_d2launch_csb.c  patch_1_07_d2launch_csb.h  patch_1_07_shim_d2launch_csb.asm  patch_d2launch_csb.c  patch_d2launch_csb.h  replacement_d2launch_csb.c  replacement_d2launch_csb.h
src/patches/ui/d2launch/login_screen_text/: CMakeLists.txt  patch_1_07_d2launch_lst.c  patch_1_07_d2launch_lst.h  patch_1_07_shim_d2launch_lst.asm  patch_d2launch_lst.c  patch_d2launch_lst.h  replacement_d2launch_lst.c  replacement_d2launch_lst.h
src/patches/ui/d2launch/main_menu_screen_background/: CMakeLists.txt  (+6 more)
(+71 files in other folders)
