add_subdirectory("change_password_screen_text")
add_subdirectory("char_create_screen_background")
add_subdirectory("create_account_screen_text")
add_subdirectory("credits_screen_background")
add_subdirectory("login_screen_text")
add_subdirectory("main_menu_screen_background")
add_subdirectory("main_menu_screen_buttons")
add_subdirectory("realm_select_option")
add_subdirectory("title_screen_background")
add_subdirectory("tcp_ip_game_screen_background")
